--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   charts_flutter: ^0.12.0
   heart_bpm: ^2.0.0+0
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
