--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   charts_flutter: ^0.12.0
   heart_bpm: ^2.0.0+0
   url_launcher: ^6.2.2
+  http: ^1.1.2
+  google_fonts: ^6.1.0
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
@@ -91,23 +94,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-  assets:
-    - assets/Pulsify.gif
-
-fonts:
-  - family: Montserrat
-    fonts:
-      - asset: assets/Montserrat-Regular.ttf
-      - asset: assets/Montserrat-Bold.ttf
-        weight: 700
-
-  - family: Ubuntu
-    fonts:
-      - asset: assets/fonts/Ubuntu/Ubuntu-Bold.ttf
-      - asset: assets/fonts/Ubuntu/Ubuntu-BoldItalic.ttf
-      - asset: assets/fonts/Ubuntu/Ubuntu-Italic.ttf
-      - asset: assets/fonts/Ubuntu/Ubuntu-Light.ttf
-      - asset: assets/fonts/Ubuntu/Ubuntu-LightItalic.ttf
-      - asset: assets/fonts/Ubuntu/Ubuntu-Medium.ttf
-      - asset: assets/fonts/Ubuntu/Ubuntu-MediumItalic.ttf
-      - asset: assets/fonts/Ubuntu/Ubuntu-Regular.ttf
