--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.1.2
   google_fonts: ^6.1.0
   fluttertoast: ^8.2.4
+  mqtt_client: ^10.0.1
 
 dev_dependencies:
   flutter_test:
