--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,5 +51,9 @@
     <array>
       <string>mqtt.tcp</string>
     </array>
+    <key>NSCameraUsageDescription</key>
+    <string>Heart BPM plugin would like to use camera to measure your heart rate.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Can I use the mic please?</string>
 </dict>
 </plist>
